tdf#159420: Show empty option even if empty is filtered out

in other columns

Regression from 89e032e9c4c51f52680c7d8bacf59ab2a34f2180
"tdf#158314: show Empty and Error entries as non-selected and inactive...
...when hidden by autofilter."

The mbHasEmpties variable was added in
9c1826d98065c30411cbf2e731560165ca2b7668
"sc-perf: do not add a million empty filter entries just to sort and
discard"

Change-Id: Ie0d81fd57f68038fac62cb6a3442e93ed547167a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162752
Tested-by: Jenkins
Reviewed-by: Kevin Suo <suokunlong@126.com>